--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <textarea id="alg">R R' R2 L L' L2 U U' U2 D D' D2 F F' F2 B B' B2 r r' r2 l l' l2 u u' u2 d d' d2 f f' f2 b b' b2 Rw Rw' Rw2 Lw Lw' Lw2 Uw Uw' Uw2 Dw Dw' Dw2 Fw Fw' Fw2 Bw Bw' Bw2 M M' M2 E E' E2 S S' S2 x x' y y'</textarea>
 
 <div class="controls">
-  
+  <button id="go">Render</button>
   <button id="clearBtn">Clear</button>
 
   <label>
@@ -600,4 +600,5 @@ renderAlg();
 
 </body>
 </html>
+
 
